<resources>
    <string name="app_name">Service Worker Helper</string>
    <string name="place_holder" translatable="false">Place Holder</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Links -->
    <string name="defaultAvatarUrl" translatable="false">https://images.squarespace-cdn.com/content/54b7b93ce4b0a3e130d5d232/1519987165674-QZAGZHQWHWV8OXFW6KRT/icon.png?content-type=image%2Fpng</string>

    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="signUp">Sing up</string>
    <string name="resetPassword">Reset password</string>
    <string name="authentication_failed">Authentication failed!</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_search">Search</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_manage_users">Manage Users</string>
    <string name="menu_pending_new_guides">Pending New Guides</string>
    <string name="menu_guides">All Guides</string>
    <string name="menu_reported_guides">Reported Guides</string>
    <string name="search">Search</string>
    <string name="sign_out">Sing out</string>
    <string name="title_activity_add_guide" translatable="false">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="guide_name">Guide name</string>
    <string name="guide_tags">Guide tags</string>
    <string name="guide_desc">Guide description</string>
    <string name="add">Add</string>
    <string name="title_activity_pending_new_guide" translatable="false">ScrollingActivity</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="title_activity_add_user" translatable="false">ScrollingActivity</string>
    <string name="name">Name of user</string>
    <string name="add_user">Add user</string>
    <string name="user_type">User type:</string>
    <string name="reEnterPassword">Re-enter password</string>
    <string name="back">Back</string>
    <string name="active_user">Active user account</string>
    <string name="rating">Ratings and reviews</string>
    <string name="rateIt">Rate this guide</string>
    <string name="write_your_opinion">Write your opinion (optional)</string>
    <string name="rateDialogTitle">Rate me</string>
    <string name="cancel">Cancel</string>
    <string name="opinionAdded">Rate added!</string>
    <string name="place_holder_float">4.1</string>
    <string name="place_holder_big_number">1 502 213</string>
    <string name="edit_your_opinion">Edit your opinion</string>
    <string name="my_opinion_options">Options</string>
    <string name="action_delete">Delete</string>
    <string name="opinion_deleted">Opinion deleted!</string>
    <string name="edit">Edit</string>
    <string name="guide_content">Guide content</string>
    <string name="yourOpinion">Your opinion</string>
    <string name="opinions">Opinions</string>
    <string name="no_opinions">No opinions</string>
    <string name="_5" translatable="false">5</string>
    <string name="_4" translatable="false">4</string>
    <string name="_3" translatable="false">3</string>
    <string name="_2" translatable="false">2</string>
    <string name="_1" translatable="false">1</string>
    <string name="first_rate">First pick some rate!</string>
    <string name="action_report">Report this guide</string>
    <string name="write_report_content">Describe why you reporting this guide</string>
    <string name="report_it">Report this guide</string>
    <string name="report">Report</string>
    <string name="hint_add_tag">" Enter the tags here, separating them with ','"</string>
    <string name="export_guide">Export guide to PDF</string>
    <string name="normal">Normal</string>
    <string name="basic_functions">Basic functions</string>
    <string name="admin_functions">Administrative functions</string>
    <string name="loading">Loading…</string>
    <string name="guide_author">Author info</string>
    <string name="creation_date">Creation date: %1$s</string>
    <string name="lack">Lack</string>
    <string name="save">Save</string>
    <string name="choose_email_app">Choose app to send email:</string>
    <string name="user_changed">User data changed!</string>
    <string name="admin" translatable="false">Admin</string>
    <string name="settings">Settings</string>
    <string name="choose_avatar">Choose photo</string>
    <string name="error" translatable="false">Error</string>
    <string name="settings_success">Success changing user data!</string>
    <string name="something_went_wrong">Somethings went wrong!</string>
    <string name="upload_foto_fail">Fail during uploading photo!</string>
    <string name="email_is_not_valid">Email is not valid!</string>
    <string name="delete_guide">Delete</string>
    <string name="corrected">Corrected</string>
    <string name="guide_corrected">Guide corrected!</string>
    <string name="guide_deleted">Guide deleted!</string>
    <string name="guide_title">Guide title</string>
    <string name="guide_report">Report content</string>
    <string name="user_name">Your name</string>
    <string name="success_user_activation">Account successfully activated! Please check your email to verify your email.</string>
    <string name="too_weak_password">Password is too weak!</string>
    <string name="different_passwords">Passwords are not the same!</string>
    <string name="user_not_found">There is no user account that contains this email. Please confirm with admin that your account has been created.</string>
    <string name="wrong_display_name">Name too short! (min. 6 characters)</string>
    <string name="empty_password">Password is empty!</string>
    <string name="empty_email">Email is empty!</string>
    <string name="user_not_activated">User not activated!</string>
    <string name="user_activated">User activated! Now you can log in!</string>
    <string name="success_adding_guide">Successfully added new guide!</string>
    <string name="menu_my_guides">My guides</string>
    <string name="category_my_guides">Guides You created</string>
    <string name="category_favorites">Favorites</string>
    <string name="created_by_my" translatable="false">created_by_my</string>
    <string name="my_favorites" translatable="false">my_favorites</string>
    <string name="status_pending">Pending for accept</string>
    <string name="status_reported">Reported</string>
    <string name="favorite" translatable="false">favorite</string>
    <string name="removed_from_fav">Removed from favourites!</string>
    <string name="added_to_fav">Added to favourites!</string>
    <string name="add_guide">Add Guide</string>
    <string name="step" translatable="false">%1$d. %2$s</string>
    <string name="AddPhoto">Add Photo</string>
    <string name="photo_not_added">Photo not added</string>
    <string name="photo_addded">Photo added</string>
    <string name="choose_photo">Choose photo</string>
    <string name="guide_content_is_empty">Guide content can not be empty!</string>
    <string name="adding_guide">Adding the guide ... It may take a while depending on the number of photos added and your internet connection speed.</string>
    <string name="fill_all_fields">Please complete all fields!</string>
    <string name="guide_reported">Guide reported!</string>
    <string name="email_not_verified">Email is not verified! Please verify your email first.</string>
    <string name="dialogTitle">Verification failed.</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="send_verification_email_again">Send verification email again.</string>
    <string name="email_send">Email has been send!</string>
    <string name="reset_password_info">An e-mail with instructions on how to reset the password will be sent to the e-mail address provided.</string>
    <string name="type_your_emil_here">Type your e-mail here</string>
    <string name="reset_password_dialog_title">Reset password</string>
    <string name="reset_email_send">An e-mail with instructions on resetting the password has been sent to the e-mail address provided.</string>
    <string name="wrong_email">"Given email is invalid! "</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure you want to Delete?</string>
    <string name="no">No</string>
    <string name="action_delete_user">Delete this user</string>
    <string name="user_deleted">User deleted!</string>
    <string name="user_created">User added successfully!</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="reEnterNewPassword">Re-enter new password</string>
    <string name="password_changed">Password changed!</string>
    <string name="wrong_current_password">Wrong current password!</string>
    <string name="deleted_user">Deleted user</string>
    <string name="guide_step">Guide step</string>
</resources>