<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radius"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">

    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/reNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/reEnterNewPassword"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray" />
</LinearLayout>